Fixing some layout issues

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -6,6 +6,7 @@
     overflow: hidden;
     max-height: 65px;
     min-height: 65px;
+    word-break: break-all;
 }
 
 .card:hover {
