--- a/src/app/components/product/product.component.scss
+++ b/src/app/components/product/product.component.scss
@@ -25,3 +25,7 @@
     border-radius: 4px;
     cursor: zoom-in;
 }
+
+.product-description {
+    word-break: break-all;
+}
